--- a/WebStyleSheet.css
+++ b/WebStyleSheet.css
@@ -85,7 +85,7 @@ background-color:silver;
 
 .form_action {
     text-align:center;
-    border-radius:50px;
+    border-radius:90px;
     background-color:silver;
     padding:30px;
 }
@@ -97,6 +97,7 @@ table {
     border-collapse:collapse;
     border-radius: 10px;
     padding-bottom: 1000px;
+    word-wrap: break-word;
 }
 
 table, th, td {
